namespace WildlifeMortalities.Data.Enums
{
    public enum GmaSpecies
    {
        Uninitialized = 0,
        Bison = 1,
        BlackBear = 2,
        Caribou = 3,
        Deer = 4,
        Goat = 5,
        GrizzlyBear = 6,
        Moose = 7,
        Sheep = 8
    }
}