namespace WildlifeMortalities.Data.Enums;

public enum GmaStatus
{
    Uninitialized = 0,
    Closed = 1,
    Open = 2,
    OpenPermitRequired = 3
}
