namespace WildlifeMortalities.Data.Enums;

public enum LicenceType
{
    Uninitialized = 0,
    Hunting = 1,
    HuntingPermit = 2,
    HuntingPhaPermit = 3,
    SpecialGuide = 4,
    Trapping = 5
}
