namespace WildlifeMortalities.Data.Enums;

public enum Sex
{
    Uninitialized = 0,
    Female = 1,
    Male = 2,
    Unknown = 3
}
